# miroSciFi

./: README.md  pyproject.toml
outputs/: context_limit_runner_idea.md  context_limit_runner_novel.md  cry_guarantee_runner_idea.md  cry_guarantee_runner_novel.md  dream_lease_runner_idea.md  dream_lease_runner_novel.md  echo_tax_idea.md  echo_tax_novel.md  light_cone_runner_idea.md  light_cone_runner_novel.md
outputs/context_limit_runner_states/: scene_01.json  scene_02.json  scene_03.json  scene_04.json  scene_05.json
outputs/cry_guarantee_runner_states/: scene_01.json  scene_02.json  scene_03.json  scene_04.json
outputs/dream_lease_runner_states/: scene_01.json  scene_02.json  scene_03.json  scene_04.json  scene_05.json
outputs/light_cone_runner_states/: scene_01.json  scene_02.json  scene_03.json  scene_04.json  scene_05.json
src/miro_scifi/: __init__.py  engine.py  graph.py  main.py  models.py  novel_runner.py  one_shot_novel.py  prompts.py  writer.py
src/miro_scifi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
